Bug 352740 - No edit focus after double click on note widget
Summary: No edit focus after double click on note widget
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.17.0 (KDE Applications 15.08.0)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-15 11:07 UTC by Ralf Habacker
Modified: 2016-10-27 12:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.17.2 (KDE Applications 15.08.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-09-15 11:07:14 UTC
A double click on a note widget opens a dialog for entering the note documentation. Unfortunally the edit focus is not inside the text area, which requires manual intervention to be able to start editing.



Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. add a note to a class diagram
3. double click on the note


Actual Results:  
The documentation could only typed into after a left mouse click inside the text area

Expected Results:  
The edit cursor should be placed directly into the text area after opening the dialog.
Comment 1 Ralf Habacker 2015-09-19 11:02:17 UTC
Git commit c0b2a9e482131f8ada3a64eb6e036b17b88f84f7 by Ralf Habacker.
Committed on 19/09/2015 at 11:02.
Pushed by habacker into branch 'Applications/15.08'.

Fix 'No edit focus after double click on note widget'.

FIXED-IN:2.17.2 (KDE Applications 15.08.2)

M  +1    -0    umbrello/dialogs/notedialog.cpp
M  +2    -0    umbrello/dialogs/widgets/documentationwidget.cpp

http://commits.kde.org/umbrello/c0b2a9e482131f8ada3a64eb6e036b17b88f84f7
Comment 2 Ralf Habacker 2015-09-19 11:40:44 UTC
Git commit 2f83b9e84d5c389963264372b6d985da42d55b86 by Ralf Habacker.
Committed on 19/09/2015 at 11:40.
Pushed by habacker into branch 'Applications/15.08'.

Fix similar bug with documentation dock widget on item selection.

M  +2    -0    umbrello/docwindow.cpp

http://commits.kde.org/umbrello/2f83b9e84d5c389963264372b6d985da42d55b86
Comment 3 Ralf Habacker 2015-10-25 13:55:17 UTC
Git commit 6f6891ab471bb6f6299c13a879d44004ba569c3e by Ralf Habacker.
Committed on 25/10/2015 at 13:54.
Pushed by habacker into branch 'master'.

Only set documentation widget focus on focus change on special user request.

Setting focus to document window unconditional hides widget deleting
support through the 'DELETE' key. On the other side does activating
doc window focus after selection change support fast editing of uml
objects. Using a checkbox in the documentation widget makes it
possible to let the user switch the wanted operation mode.
REVIEW:125781

M  +18   -3    umbrello/docwindow.cpp
M  +2    -0    umbrello/docwindow.h

http://commits.kde.org/umbrello/6f6891ab471bb6f6299c13a879d44004ba569c3e
Comment 4 Ralf Habacker 2015-12-16 18:48:25 UTC
Git commit c3bd0122f08e73bbfd26b8b7a676b6ec31be1c6f by Ralf Habacker.
Committed on 16/12/2015 at 18:15.
Pushed by habacker into branch 'frameworks'.

Only set documentation widget focus on focus change on special user request.

Setting focus to document window unconditional hides widget deleting
support through the 'DELETE' key. On the other side does activating
doc window focus after selection change support fast editing of uml
objects. Using a checkbox in the documentation widget makes it
possible to let the user switch the wanted operation mode.
REVIEW:125781

M  +18   -3    umbrello/docwindow.cpp
M  +2    -0    umbrello/docwindow.h

http://commits.kde.org/umbrello/c3bd0122f08e73bbfd26b8b7a676b6ec31be1c6f
Comment 5 Ralf Habacker 2015-12-16 18:49:06 UTC
Git commit 3041df6b032d4a57744c364c2702a00d72f64f6c by Ralf Habacker.
Committed on 16/12/2015 at 18:15.
Pushed by habacker into branch 'frameworks'.

Fix 'No edit focus after double click on note widget'.

FIXED-IN:2.17.2 (KDE Applications 15.08.2)

M  +1    -0    umbrello/dialogs/notedialog.cpp
M  +2    -0    umbrello/dialogs/widgets/documentationwidget.cpp

http://commits.kde.org/umbrello/3041df6b032d4a57744c364c2702a00d72f64f6c
Comment 6 Ralf Habacker 2015-12-16 18:49:19 UTC
Git commit 9e465ba020e23e1b8126a21019ed594adafa2a6e by Ralf Habacker.
Committed on 16/12/2015 at 18:15.
Pushed by habacker into branch 'frameworks'.

Fix similar bug with documentation dock widget on item selection.

M  +2    -0    umbrello/docwindow.cpp

http://commits.kde.org/umbrello/9e465ba020e23e1b8126a21019ed594adafa2a6e
Comment 7 Lays Rodrigues 2016-10-27 11:47:07 UTC
Git commit 3eba33bf7caa258a0456b5740961c38aa361ec22 by Lays Rodrigues, on behalf of Ralf Habacker.
Committed on 27/10/2016 at 11:44.
Pushed by laysrodrigues into branch 'frameworks'.

Fix similar bug with documentation dock widget on item selection.

M  +1    -2    umbrello/docwindow.cpp

http://commits.kde.org/umbrello/3eba33bf7caa258a0456b5740961c38aa361ec22
Comment 8 Lays Rodrigues 2016-10-27 12:07:19 UTC
Git commit a53341ac7b40da91ff9b50827974710789fa75c0 by Lays Rodrigues, on behalf of Ralf Habacker.
Committed on 27/10/2016 at 11:44.
Pushed by laysrodrigues into branch 'frameworks'.

Only set documentation widget focus on focus change on special user request.

Setting focus to document window unconditional hides widget deleting
support through the 'DELETE' key. On the other side does activating
doc window focus after selection change support fast editing of uml
objects. Using a checkbox in the documentation widget makes it
possible to let the user switch the wanted operation mode.
REVIEW:125781

M  +2    -1    umbrello/docwindow.cpp

http://commits.kde.org/umbrello/a53341ac7b40da91ff9b50827974710789fa75c0