Fix 'No edit focus after double click on note widget'.

FIXED-IN:2.17.2 (KDE Applications 15.08.2)
BUG: 352740